--- a/raisondetre.html
+++ b/raisondetre.html
@@ -11,6 +11,8 @@
 
 This website is designed to search for subsequent publications that have high chances of mixing the subjects of each the submitted one, and increase the chance that they are specifically related to the sought subject.
 
-It uses the opencitation API to recover.<p/>
+It uses the opencitation API to recover.
+
+The name is a reference to the expression "<a=https://en.wikipedia.org/wiki/Standing_on_the_shoulders_of_giants>On the shoulders of giants</a>"<p/>
 </body>
 </html>
