--- a/raisondetre.html
+++ b/raisondetre.html
@@ -7,12 +7,12 @@
 <body>
 <h3>Raison d’être<h3></h3>
 
-<p>When reading an interesting publication, I often try to see further if the idea(s) exposed in it have been further developed, combined with others, mentioned or acknowledge in other ones. Google Scholar allows finding which paper have cited it, but most of these are often loosely related and not specific to the main topic of the article.
+<p>When reading an interesting publication, I often try to see if the idea(s) exposed in it have been further developed, combined with others, mentioned or acknowledged in other ones. Google Scholar allows finding which papers have cited it, but most of these are usually loosely related and not specific to the main topic of the article.
 
-This website is designed to search for subsequent publications that have high chances of mixing the subjects of each the submitted one, and increase the chance that they are specifically related to the sought subject.
+This website is designed to search for subsequent publications that have high chances of mixing the subjects of each of the submitted ones and increase the chance that they are specifically related to the sought-after subject.
 
-It uses the opencitation API to recover.
+It uses the OpenCitation API to get the list of publications citing the submitted ones, and the crossref API to get DOIs from corresponding titles.
 
-The name is a reference to the expression "<a=https://en.wikipedia.org/wiki/Standing_on_the_shoulders_of_giants>On the shoulders of giants</a>"<p/>
+The name is a reference to the expression "<a=https://en.wikipedia.org/wiki/Standing_on_the_shoulders_of_giants>Standign on the shoulders of giants</a>"<p/>
 </body>
 </html>
