--- a/raisondetre.html
+++ b/raisondetre.html
@@ -9,9 +9,9 @@
 
 <p>When reading an interesting publication, I often try to see if the idea(s) exposed in it have been further developed, combined with others, mentioned or acknowledged in other ones. Google Scholar allows finding which papers have cited it, but most of these are usually loosely related and not specific to the main topic of the article.
 
-This website is designed to search for subsequent publications that have high chances of mixing the subjects of each of the submitted ones and increase the chance that they are specifically related to the sought-after subject.
+<p>This website is designed to search for subsequent publications that have high chances of mixing the subjects of each of the submitted ones and increase the chance that they are specifically related to the sought-after subject.</p>
 
-It uses the OpenCitation API to get the list of publications citing the submitted ones, and the crossref API to get DOIs from corresponding titles.
+<p>It uses the OpenCitation API to get the list of publications citing the submitted ones, and the crossref API to get DOIs from corresponding titles.
 
 The name is a reference to the expression "<a href="https://en.wikipedia.org/wiki/Standing_on_the_shoulders_of_giants">Standign on the shoulders of giants</a>"<p/>
 </body>
