--- a/raisondetre.html
+++ b/raisondetre.html
@@ -13,6 +13,6 @@
 
 <p>It uses the OpenCitation API to get the list of publications citing the submitted ones, and the crossref API to get DOIs from corresponding titles.
 
-The name is a reference to the expression "<a href="https://en.wikipedia.org/wiki/Standing_on_the_shoulders_of_giants">Standign on the shoulders of giants</a>"<p/>
+The name is a reference to the expression "<a href="https://en.wikipedia.org/wiki/Standing_on_the_shoulders_of_giants">Standign on the shoulders of giants</a>".<p/>
 </body>
 </html>
