--- a/raisondetre.html
+++ b/raisondetre.html
@@ -7,7 +7,7 @@
 <body>
 <h3>Raison d’être<h3></h3>
 
-<p>When reading an interesting publication, I often try to see if the idea(s) exposed in it have been further developed, combined with others, mentioned or acknowledged in other ones. Google Scholar allows finding which papers have cited it, but most of these are usually loosely related and not specific to the main topic of the article.
+<p>When reading an interesting publication, I often try to see if the idea(s) exposed in it have been further developed, combined with others, mentioned or acknowledged in other ones. Google Scholar allows finding which papers have cited it, but most of these are usually loosely related, not specific to the main topic of the article.
 
 <p>This website is designed to search for subsequent publications that have high chances of mixing the subjects of each of the submitted ones and increase the chance that they are specifically related to the sought-after subject.</p>
 
