--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Search publication(s) that cite these</title>
+    <title>Search publication(s) that cite all these</title>
 </head>
 <body>
     <a href="raisondetre.html" id="about-link">About this tool</a>
