--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <a href="raisondetre.html" id="about-link">About this tool</a>
-    <h1>Search publication(s) that cite these</h1>
+    <h1>Search publication(s) that cite all these</h1>
     <div id="inputContainer">
         <div class="input-group">
             <input type="text" class="article-input" placeholder="DOI" size="50"> <!-- No conversion from titles as the crossref API always seems to return unrelated DOIs -->
