--- a/raisondetre.html
+++ b/raisondetre.html
@@ -5,15 +5,16 @@
     <title>Raisons d'être</title>
 </head>
 <body>
-<h3>Raison d’être</h3>
+<h3>Raisons d’être</h3>
 
-<p>When reading an interesting publication, I often try to see if the idea(s) exposed in it have been further developed, combined with others, mentioned or acknowledged in other ones. Google Scholar allows finding papers that have cited it, but most of these are usually loosely related to it and its main topic.
+<p>Raison d’être
+When reading interesting publications, I often try to see if the idea(s) exposed in them have been further developed, combined with others, mentioned, or acknowledged in other ones. Google Scholar allows finding papers that have cited them, but most of these are usually loosely related to them and their main topic.</p>
 
-<p>This website is designed to search for subsequent publications that have high chances of mixing the subjects of each of the submitted ones and increase the chance that they are specifically related to the sought-after subject.</p>
+<p>This website is designed to search for subsequent publications that have a high chance of mixing the subjects of the submitted ones and increase the chance that they are specifically related to them.</p>
+
+<p>The name references the expression "<a href="https://en.wikipedia.org/wiki/Standing_on_the_shoulders_of_giants">Standign on the shoulders of giants</a>".</p>
 
 <p>It uses the OpenCitation API to get the list of publications citing the submitted ones, and the crossref API to get info from DOIs.
-
-The name is a reference to the expression "<a href="https://en.wikipedia.org/wiki/Standing_on_the_shoulders_of_giants">Standign on the shoulders of giants</a>".<p/>
 
 <p><a href="https://github.com/Consistos/On-the-cites-of">Improve it</a>.</p>
 </body>
