--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             position: relative;
         }
         input {
-            width: 100%;
+            width: 70%;
             padding: 10px;
             max-width: 700px;
             margin: 8px 0;
@@ -43,6 +43,7 @@
             color: white;
             border: none;
             cursor: pointer;
+            margin: 8px 0;
         }
         #results {
             margin-top: 20px;
