--- a/raisondetre.html
+++ b/raisondetre.html
@@ -6,9 +6,7 @@
 </head>
 <body>
 <h3>Raisons d’être</h3>
-
-<p>Raison d’être
-When reading interesting publications, I often try to see if the idea(s) exposed in them have been further developed, combined with others, mentioned, or acknowledged in other ones. Google Scholar allows finding papers that have cited them, but most of these are usually loosely related to them and their main topic.</p>
+<p>When reading interesting publications, I often try to see if the idea(s) exposed in them have been further developed, combined with others, mentioned, or acknowledged in other ones. Google Scholar allows finding papers that have cited them, but most of these are usually loosely related to them and their main topic.</p>
 
 <p>This website is designed to search for subsequent publications that have a high chance of mixing the subjects of the submitted ones and increase the chance that they are specifically related to them.</p>
 
