Reset to before addition of button to remove input

--- a/raisondetre.html
+++ b/raisondetre.html
@@ -10,7 +10,7 @@
 
 <p>This website is designed to search for subsequent publications that have a high chance of mixing the subjects of the submitted ones and increase the chance that they are specifically related to them.</p>
 
-<p>The name references the expression "<a href="https://en.wikipedia.org/wiki/Standing_on_the_shoulders_of_giants">Standign on the shoulders of giants</a>".</p>
+<p>The name references the expression "<a href="https://en.wikipedia.org/wiki/Standing_on_the_shoulders_of_giants">Standing on the shoulders of giants</a>".</p>
 
 <p>It uses the OpenCitation API to get the list of publications citing the submitted ones, and the crossref API to get info from DOIs.
 
