--- a/raisondetre.html
+++ b/raisondetre.html
@@ -14,6 +14,6 @@
 
 <p>It uses the OpenCitation API to get the list of publications citing the submitted ones, and the crossref API to get info from DOIs.
 
-<p><a href="https://github.com/Consistos/On-the-cites-of">Improve it</a>.</p>
+<p>You can <a href="https://github.com/Consistos/On-the-cites-of">improve it</a>.</p>
 </body>
 </html>
