--- a/raisondetre.html
+++ b/raisondetre.html
@@ -12,7 +12,7 @@
 
 <p>The name references the expression "<a href="https://en.wikipedia.org/wiki/Standing_on_the_shoulders_of_giants">Standing on the shoulders of giants</a>".</p>
 
-<p>It uses the OpenCitation API to get the list of publications citing the submitted ones, and the crossref API to get info from DOIs.
+<p>It uses the OpenCitation API to get the list of publications citing the submitted ones, and the crossref API to get info from <a href="https://en.wikipedia.org/wiki/Digital_object_identifier>">DOI</a>s.
 
 <p>You can <a href="https://github.com/Consistos/On-the-cites-of">improve it</a>.</p>
 </body>
