--- a/raisondetre.html
+++ b/raisondetre.html
@@ -2,18 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Raisons d'être</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-<h3>Raisons d’être</h3>
-<p>When reading interesting publications, I often try to see if the idea(s) exposed in them have been further developed, combined with others, mentioned, or acknowledged in other ones. Google Scholar allows finding papers that have cited them, but most of these are usually loosely related to them and their main topic.</p>
+<body class="bg-gray-50 min-h-screen">
+    <header class="relative mb-8 pt-8">
+        <h1 class="text-lg text-gray-800 text-center px-16"><a href="index.html" class="text-grey-600 hover:text-blue-800">Search publication(s) that cite all these ones</a></h1>
+    </header>
+    
+    <main class="max-w-2xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
+        <h2 class="text-2xl font-semibold text-gray-900 mb-6">Raisons d'être</h2>
+        
+        <div class="space-y-4 text-gray-700">
+            <p class="leading-relaxed">When reading interesting publications, I often try to see if the idea(s) exposed in them have been further developed, combined with others, mentioned, or acknowledged in other ones. Google Scholar allows finding papers that have cited them, but most of these are usually loosely related to them and their main topic.</p>
 
-<p>This website is designed to search for subsequent publications that have a high chance of mixing the subjects of the submitted ones and increase the chance that they are specifically related to them.</p>
+            <p class="leading-relaxed">This website is designed to search for subsequent publications that have a high chance of mixing the subjects of the submitted ones and increase the chance that they are specifically related to them.</p>
 
-<p>The name references the expression "<a href="https://en.wikipedia.org/wiki/Standing_on_the_shoulders_of_giants">Standing on the shoulders of giants</a>".</p>
+            <p class="leading-relaxed">The name references the expression "<a href="https://en.wikipedia.org/wiki/Standing_on_the_shoulders_of_giants" class="text-blue-600 hover:text-blue-800 underline">Standing on the shoulders of giants</a>".</p>
 
-<p>It uses the OpenCitation API to get the list of publications citing the submitted ones, and the crossref API to get info from <a href="https://en.wikipedia.org/wiki/Digital_object_identifier>">DOI</a>s.
+            <p class="leading-relaxed">It uses the OpenCitation API to get the list of publications citing the submitted ones, and the crossref API to get info from <a href="https://en.wikipedia.org/wiki/Digital_object_identifier" class="text-blue-600 hover:text-blue-800 underline">DOI</a>s.</p>
 
-<p>You can <a href="https://github.com/Consistos/On-the-cites-of">improve it</a>.</p>
+            <p class="leading-relaxed">You can <a href="https://github.com/Consistos/On-the-cites-of" class="text-blue-600 hover:text-blue-800 underline">improve it</a>.</p>
+        </div>
+    </main>
 </body>
 </html>
