--- a/raisondetre.html
+++ b/raisondetre.html
@@ -21,7 +21,7 @@
 
             <p class="leading-relaxed">The name references the expression "<a href="https://en.wikipedia.org/wiki/Standing_on_the_shoulders_of_giants" class="text-blue-600 hover:text-blue-800 underline">Standing on the shoulders of giants</a>".</p>
 
-            <p class="leading-relaxed">It uses the OpenCitation API to get the list of publications citing the submitted ones, and the crossref API to get info from <a href="https://en.wikipedia.org/wiki/Digital_object_identifier" class="text-blue-600 hover:text-blue-800 underline">DOI</a>s.</p>
+            <p class="leading-relaxed">It uses the OpenCitation API to get the list of publications citing the submitted ones, and the Crossref API to get info from <a href="https://en.wikipedia.org/wiki/Digital_object_identifier" class="text-blue-600 hover:text-blue-800 underline">DOI</a>s.</p>
 
             <p class="leading-relaxed">You can <a href="https://github.com/Consistos/On-the-cites-of" class="text-blue-600 hover:text-blue-800 underline">improve it</a>.</p>
         </div>
