--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body class="bg-gray-50 min-h-screen">
     <header class="relative mb-4 sm:mb-8 pt-4 sm:pt-8">
         <h1 class="text-base sm:text-lg text-gray-800 text-left sm:text-center px-4 sm:px-16 max-w-[250px] sm:max-w-none">
-            <a href="index.html" id="home" class="text-grey-600 hover:text-blue-800 inline-block text-center sm:inline sm:text-left">
+            <a href="index.html" id="home" class="text-grey-600 hover:underline inline-block text-center sm:inline sm:text-left">
                 <span class="sm:hidden">Search publication(s)<br>that cite all these</span>
                 <span class="hidden sm:inline">Search publication(s) that cite all these</span>
             </a>
         </h1>
         <div class="absolute right-4 sm:right-10 top-4 sm:top-8">
-            <a href="raisondetre.html" id="about-link" class="text-grey-600 hover:text-blue-800">About</a>
+            <a href="raisondetre.html" id="about-link" class="text-grey-600 hover:underline">About</a>
         </div>
     </header>
     <div id="errorMessage" class="hidden max-w-2xl mx-auto mb-4 p-4 bg-red-100 border border-red-400 text-red-700 rounded-lg"></div>
