--- a/raisondetre.html
+++ b/raisondetre.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-gray-50 min-h-screen">
     <header class="relative mb-8 pt-8">
-        <h1 class="text-lg text-gray-800 text-center px-16"><a href="index.html" class="text-grey-600 hover:text-blue-800">Search publication(s) that cite all these ones</a></h1>
+        <h1 class="text-lg text-gray-800 text-center px-16"><a href="index.html" class="text-grey-600 hover:text-blue-800">Search publication(s) that cite all these</a></h1>
     </header>
     
     <main class="max-w-2xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
