--- a/raisondetre.html
+++ b/raisondetre.html
@@ -17,7 +17,7 @@
         <div class="space-y-4 text-gray-700">
             <p class="leading-relaxed">When reading interesting publications, I often try to see if the idea(s) exposed in them have been combined with others. Google Scholar allows finding papers that have cited them, but most of these are usually loosely related to them and their main topic.</p>
 
-            <p class="leading-relaxed">By searching for subsequent publications that have cited multiple ones, this website allows finding those that have a high chance of mixing the subjects of the submitted ones and increase the chance that they are specifically related to them.</p>
+            <p class="leading-relaxed">By searching for publications that have cited multiple ones, this website searches those that have a high chance of mixing the subjects of the submitted publications and increase the chance that they are specifically related to them.</p>
 
             <p class="leading-relaxed">The name references the expression "<a href="https://en.wikipedia.org/wiki/Standing_on_the_shoulders_of_giants" class="text-blue-600 hover:text-blue-800 underline">Standing on the shoulders of giants</a>".</p>
 
