--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div id="inputContainer" class="space-y-4 flex flex-col items-center">
                 <div class="input-group flex gap-2 w-full max-w-[800px] px-4 sm:px-0">
                     <div class="relative flex-grow">
-                        <textarea class="article-input block w-full px-4 py-2 text-base text-gray-900 border border-gray-300 rounded-lg bg-gray-50 resize-y" placeholder="Title or DOI" rows="2"></textarea>
+                        <textarea class="article-input block w-full px-4 py-2 text-base text-gray-900 border border-gray-300 rounded-lg bg-gray-50 resize-y" placeholder="Title, DOI, or PubMed/ArXiv URL/ID" rows="2"></textarea>
                         <button class="clear-input absolute right-2 top-2 text-gray-400 hover:text-gray-600 hidden" onclick="clearInput(this)">
                             <span class="text-xl">×</span>
                         </button>
@@ -33,7 +33,7 @@
                 </div>
                 <div class="input-group flex gap-2 w-full max-w-[800px] px-4 sm:px-0">
                     <div class="relative flex-grow">
-                        <textarea class="article-input block w-full px-4 py-2 text-base text-gray-900 border border-gray-300 rounded-lg bg-gray-50 resize-y" placeholder="Title or DOI" rows="2"></textarea>
+                        <textarea class="article-input block w-full px-4 py-2 text-base text-gray-900 border border-gray-300 rounded-lg bg-gray-50 resize-y" placeholder="Title, DOI, or PubMed/ArXiv URL/ID" rows="2"></textarea>
                         <button class="clear-input absolute right-2 top-2 text-gray-400 hover:text-gray-600 hidden" onclick="clearInput(this)">
                             <span class="text-xl">×</span>
                         </button>
