--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     <title>Search publication(s) that cite all these</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script type="module" src="js/main.js"></script>
 </head>
 <body class="bg-gray-50 min-h-screen">
     <header class="relative mb-4 sm:mb-8 pt-4 sm:pt-8">
@@ -61,6 +62,5 @@
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
