--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             findCommonCitations,
             updateClearButtonVisibility,
             ensureRemoveButton,
-            initialisePage
+            initialisePage,
+            addToPublicationSearch
         } from './js/main.js';
 
         // Export functions to window for onclick handlers
@@ -27,6 +28,7 @@
         window.findCommonCitations = findCommonCitations;
         window.updateClearButtonVisibility = updateClearButtonVisibility;
         window.ensureRemoveButton = ensureRemoveButton;
+        window.addToPublicationSearch = addToPublicationSearch;
 
         // Initialize page when DOM is loaded
         document.addEventListener('DOMContentLoaded', function() {
