--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="Permissions-Policy" content="run-ad-auction=(), join-ad-interest-group=(), attribution-reporting=()">
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
-    <title>Search publication(s) that cite all these</title>
+    <title>Search publications that cite all these</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles.css">
     <script type="module">
