--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
         });
 
         // Handle popstate events (back/forward navigation)
+        console.log('🔧 SETUP: Adding popstate event listener');
         window.addEventListener('popstate', handleNavigation);
+        
+        // Test that the handler is attached
+        console.log('🔧 SETUP: Navigation handler attached:', typeof handleNavigation);
 
         // Event listeners for search via Enter key
         document.addEventListener('keypress', function(event) {
@@ -102,6 +106,14 @@
                 </button>
                 <button onclick="window.addInput()" class="bg-white hover:bg-green-600 hover:text-white text-slate-600 h-12 px-6 text-lg rounded-lg transition-colors flex items-center justify-center">
                     Add a publication
+                </button>
+            </div>
+            
+            <!-- Debug button for testing navigation -->
+            <div class="flex justify-center mt-4">
+                <button onclick="console.log('🧪 TEST: Manual navigation test'); window.history.pushState({}, '', '?doi1=10.1038%2Fnature12373'); window.dispatchEvent(new PopStateEvent('popstate'));" 
+                        class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 text-sm rounded">
+                    🧪 Test Navigation
                 </button>
             </div>
 
